# Auto_Anime_DL

./: README.md  pyproject.toml
