[project]
name = "auto-anime-dl"
version = "0.1.0"
description = "RSS anime feed collector with FastAPI preview and optional PikPak automation"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "pikpakapi>=0.1.11",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
